Seccion de simulacion de pasos en la app con resposive

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap" rel="stylesheet" />
-	<link rel="stylesheet" href="/build/css/app.css" />
+	<link rel="stylesheet" href="build/css/app.css" />
 </head>
 
 <body>
@@ -58,6 +58,33 @@
 		</div>
 	</section>
 
+	<section class="pasos">
+
+		<img class="pasos__wave" src="build/img/wave.svg" alt="imagen wave">
+
+		<div class="pasos__contenido">
+
+			<h2 class="pasos__heading">¿Cómo funciona?<span class="pasos__heading--span">tan fácil como 1,2 y 3</span> </h2>
+
+			<div class="pasos__grid contenedor">
+
+				<div class="pasos__paso">
+					<img class="pasos__imagen" src="build/img/paso_1.png" alt="imagen paso app">
+				</div>
+
+				<div class="pasos__paso">
+					<img class="pasos__imagen" src="build/img/paso_2.png" alt="imagen paso app">
+				</div>
+
+				<div class="pasos__paso">
+					<img class="pasos__imagen" src="build/img/paso_3.png" alt="imagen paso app">
+				</div>
+
+			</div>
+
+		</div>
+
+	</section>
 </body>
 
 </html>
