--- a/index.html
+++ b/index.html
@@ -85,6 +85,249 @@
 		</div>
 
 	</section>
+
+	<section class="testimoniales contenedor">
+
+		<h2 class="testimoniales__heading">Testimoniales</h2>
+
+		<div class="testimoniales__grid">
+			<div class="testimonial">
+				<header class="testimonial__header">
+					<div class="testimonial__imagen">
+						<img src="build/img/testimonial1.jpg" alt="testimonial">
+					</div>
+
+					<div class="testimonial__informacion">
+						<p class="testimonial__autor">Juan Gomez</p>
+						<img class="testimonial__calificacion" src="build/img/estrellas.png" alt="imagen estrellas" >
+					</div>
+				</header>
+
+				<blockquote class="testimonial__texto">
+					¡Esta aplicación es una verdadera revolución en el mundo de la comida a domicilio! La facilidad de uso, la variedad de opciones y la calidad de los platos son inmejorables. ¡Gracias por ofrecer esta increíble experiencia!
+
+				</blockquote>
+			</div>
+
+			<div class="testimonial">
+				<header class="testimonial__header">
+					<div class="testimonial__imagen">
+						<img src="build/img/testimonial5.jpg" alt="testimonial">
+					</div>
+
+					<div class="testimonial__informacion">
+						<p class="testimonial__autor">Itzel Cruz</p>
+						<img class="testimonial__calificacion" src="build/img/estrellas.png" alt="imagen estrellas" >
+					</div>
+				</header>
+
+				<blockquote class="testimonial__texto">
+					Me encanta la app, tiene una gran variedad de opciones para elegir y lo puedo hacer con facilidad.
+				</blockquote>
+			</div>
+
+			<div class="testimonial">
+				<header class="testimonial__header">
+					<div class="testimonial__imagen">
+						<img src="build/img/testimonial4.jpg" alt="testimonial">
+					</div>
+
+					<div class="testimonial__informacion">
+						<p class="testimonial__autor">Rocio Rodriguez</p>
+						<img class="testimonial__calificacion" src="build/img/estrellas.png" alt="imagen estrellas" >
+					</div>
+				</header>
+
+				<blockquote class="testimonial__texto">
+					Como usuario de esta app, puedo decir que es una de las mejores opciones para pedir comida. La calidad de los platos es excepcional y la atención al cliente es inmejorable. ¡Siempre recomendaría esta aplicación!
+				</blockquote>
+			</div>
+
+			<div class="testimonial">
+				<header class="testimonial__header">
+					<div class="testimonial__imagen">
+						<img src="build/img/testimonial2.jpg" alt="testimonial">
+					</div>
+
+					<div class="testimonial__informacion">
+						<p class="testimonial__autor">Cynthia V</p>
+						<img class="testimonial__calificacion" src="build/img/estrellas.png" alt="imagen estrellas" >
+					</div>
+				</header>
+
+				<blockquote class="testimonial__texto">
+					Esta aplicación de comida es una delicia, La interfaz es intuitiva y fácil de usar. Me encanta la variedad de opciones de comida y la velocidad de entrega. ¡Gracias por la excelente experiencia!
+				</blockquote>
+			</div>
+
+			<div class="testimonial">
+				<header class="testimonial__header">
+					<div class="testimonial__imagen">
+						<img src="build/img/testimonial3.jpg" alt="testimonial">
+					</div>
+
+					<div class="testimonial__informacion">
+						<p class="testimonial__autor">Jose Hernandez</p>
+						<img class="testimonial__calificacion" src="build/img/estrellas.png" alt="imagen estrellas" >
+					</div>
+				</header>
+
+				<blockquote class="testimonial__texto">
+					Una excelente app, puedo seleccionar de una gran cantidad de opciones y pagar en tarjeta o efectivo según me convenga.
+				</blockquote>
+			</div>
+
+
+		</div>
+	</section>
+
+	<main class="favoritos">
+
+		<h2 class="favoritos__heading">Restaurantes Favoritos</h2>
+
+		<div class="favoritos__grid contenedor">
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+
+			<div class="favorito">
+				<div class="favorito__grid">
+					<div class="favorito__imagen">
+						<img src="build/img/logo_ensaladas.png" alt="logo restaurante">
+					</div>
+
+					<div class="favorito__contenido">
+						<img src="build/img/estrellas.png" alt="calificacion restaurante">
+						<h3 class="favorito__nombre">Green Ensaladas</h3>
+						<p class="favorito__descripcion">"Green Ensaladas: frescas y deliciosas ensaladas artesanales, preparadas con ingredientes naturales y amor, en un ambiente acogedor y ecológico."</p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</main>
 </body>
 
 </html>
