--- a/index.html
+++ b/index.html
@@ -328,6 +328,84 @@
 			</div>
 		</div>
 	</main>
+
+	<section class="repartidores">
+
+		<h2 class="repartidores__heading">Gana dinero con AppComida</h2>
+
+		<div class="repartidores__grid contenedor">
+
+			<div class="repartidores__imagen">
+				<img src="build/img/repartidor.jpg" alt="imagen repartidor">
+			</div>
+
+			<div class="repartidores__contenido">
+				<p class="repartidores__texto">Con AppComida, puedes ganar dinero siendo repartidor y disfrutar de una gran flexibilidad en tus horarios. Registra tu vehículo y comienza a recibir pedidos para entregar comida a clientes satisfechos.</p>
+				<p class="repartidores__texto">Como repartidor de AppComida, podrás elegir tus propios horarios, ganar dinero adicional y tener la oportunidad de interactuar con clientes y restaurantes de tu zona. ¡Registra tu cuenta y comienza a ganar dinero hoy mismo!</p>
+
+				<a href="#" class="repartidores__enlace">Más Información</a>
+			</div>
+		</div>
+	</section>
+
+	<section class="descargar">
+
+		<div class="descargar__grid contenedor">
+
+			<div class="descargar__imagen">
+				<img src="build/img/app.png" alt="imagen app">
+			</div>
+
+			<div class="tiendas">
+
+				<h3 class="tiendas__heading">Descarga la App</h3>
+
+				<p class="tiendas__texto">Disponible en App Store y Google Play</p>
+
+				<div class="tiendas__grid">
+
+					<a href="#" class="tiendas__enlace">
+						<img src="build/img/tienda-apple.svg" alt="imagen app store">
+					</a>
+
+					<a href="#" class="tiendas__enlace">
+						<img src="build/img/tienda-android.svg" alt="imagen play store">
+					</a>
+
+				</div>
+			</div>
+		</div>
+	</section>
+
+	<footer class="footer">
+
+		<div class="footer__grid contenedor">
+
+			<div class="footer__widget">
+				<h3 class="footer__heading">Nosotros</h3>
+				<p class="footer__texto">En AppComida, somos una empresa innovadora que conecta a la comunidad a través de la comida, ofreciendo una plataforma de entrega de alta calidad y servicio al cliente excepcional.</p>
+			</div>
+
+			<div class="footer__widget">
+				<h3 class="footer__heading">Navegación</h3>
+				<nav class="footer__navegacion">
+					<a href="#" class="footer__link">¿Como funciona?</a>
+					<a href="#" class="footer__link">Registra tu restaurante</a>
+					<a href="#" class="footer__link">Únete como repartidor</a>
+					<a href="#" class="footer__link">Nuestras políticas de privacidad</a>
+					<a href="#" class="footer__link">Descargar app móvil</a>
+					<a href="#" class="footer__link">Ayuda y Soporte</a>
+				</nav>
+			</div>
+
+			<div class="footer__widget">
+				<h3 class="footer__heading">Contacto</h3>
+				<p class="footer__texto">¿Tienes alguna pregunta o necesitas ayuda? Puedes contactarnos a través de nuestro correo electrónico contacto@appcomida.com. Estamos disponibles para ayudarte de lunes a domingo de 9am a 9pm. ¡No dudes en contactarnos!</p>
+			</div>
+		</div>
+
+		<p class="footer__copyright">Todos los derechos reservados</p>
+	</footer>
 </body>
 
 </html>
